fix: remove viewport scaling and blue highlight on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/** Remove blue hughlight on mobile. */
+* {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
